# SterdomServer

./: CMakeLists.txt  wstest.html
src/: main.cpp  settings.cpp  settings.h
src/data/: reader_base.cpp  reader_base.h  readers.h  temperature_reader.cpp  updater.cpp  updater.h
src/network/: connection.cpp  connection.h  connection_handler.cpp  connection_handler.h  download.cpp  download.h
src/utils/: config.cpp  config.h  general.cpp  general.h  timer.cpp  timer.h
